# DiffGT2PreForPose

./: CMakeLists.txt  README.md  main.cpp  main_output.cpp  run_diff_json.sh  run_gt_json.sh  run_pre_json.sh
